# farm_stack_practice

./: .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/src/: db.py  main.py  setup.py
backend/src/app/: db.py  main.py
backend/src/app/routes/htmx/: __init__.py  models.py  views.py
backend/src/app/routes/htmx/templates/: about.html.j2  main.html.j2  post_form.html.j2  post_item.html.j2  posts.html.j2
backend/src/app/routes/react/: __init__.py  views.py
frontend/: Dockerfile  Dockerfile.prod
frontend-htmx/: README.md
frontend-htmx/conf/: default.conf
frontend-htmx/public/: index.html
frontend/src/: package-lock.json
frontend/src/public/: index.html
frontend/src/src/: App.js  Backend.js  Items.js
